2001-02-12  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm: document --disable-sm
	* fvwm2.1: update -version description

2001-02-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	(menu_func):
	zero out mp structure

	* fvwm/functions.c (execute_function):
	fixed parsing of one character commands.
	* fvwm/style.c (ProcessNewStyle):
	added some syntax error messages
	parsing fixes
	* libs/Graphics.c (ParseGradient):
	Parsing fixes
	* libs/Parse.c (CopyToken):
	Corrected typo

2001-02-11  Dan Espen  <dane@mk.telcordia.com>

	* tests/menus/menus.read: Put /tmp in the imagepath for menus test.

2001-02-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	Fixed PopupDelay 0

	* fvwm/borders.c:
	* libs/safemalloc.c:
	* libs/strdup.c:
	-Wall fix

2001-02-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupFrame):
	* fvwm/builtins.c (WindowShade):
	* fvwm/add_window.c (RestoreWithdrawnLocation):
	keep client window at same root coordinates when shaded

2001-02-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/{builtins,functions,fvwm,menus,module_interface}.c:
	* fvwm/{move_resize,read,session,style,windowlist}.c:
	* libs/{Parse.c,envvar.c,safemalloc.c,safemalloc.h}:
	safestrdup patch by Lorenz Minder

2001-02-06  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: Incorporate change from Dan Astoorian.

2001-02-05  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* acinclude.m4:
	Display a problem description near every "no" in configure.

2001-02-04  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/README: Update.

	* tests/purify/purify.read: Remove random action testes.

	* tests/purify/purify.fvwm2rc: Finally, all the tests are in man page
	order.  Missing or inadequate tests are documented with a comment.

2001-02-03  Mikhael Goikhman  <migo@homemail.com>

	* sample.fvwmrc/system.fvwm2rc-sample-95:
	changes inspired by the Lorenz Minder's patch
